@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:31702
+  FORMAL BUILD NUMBER:31703
 */
 
-#define PRODUCT_VER_STRING "3.0.0.31702"
-#define FILE_VER_STRING "WI-T3.0.0.31702"
-#define LICENSE_VER_STRING "WI-T3.0.0.31702"
-#define FILE_VER_NUMBER 3, 0, 0, 31702
+#define PRODUCT_VER_STRING "3.0.0.31703"
+#define FILE_VER_STRING "WI-T3.0.0.31703"
+#define LICENSE_VER_STRING "WI-T3.0.0.31703"
+#define FILE_VER_NUMBER 3, 0, 0, 31703
 #define FB_MAJOR_VER "3"
 #define FB_MINOR_VER "0"
 #define FB_REV_NO "0"
-#define FB_BUILD_NO "31702"
+#define FB_BUILD_NO "31703"
 #define FB_BUILD_TYPE "T"
 #define FB_BUILD_SUFFIX "Firebird 3.0 Beta 2"
