@@ -1,3 +1,8 @@
+ 2015-03-08 13:20  egorpugin 
+   M CMakeLists.txt
+   M src/CMakeLists.txt
+[build] [cmake] Fix OS X build.
+
  2015-03-06 20:43  dimitr 
    M src/jrd/jrd.cpp
 Fixed a possible reason for CORE-4705. Alex, please review.
